# homework-f

./: CMakeLists.txt  box.cpp  box.h  button.cpp  button.h  finddialog.cpp  finddialog.h  finddialog.pro  finddialog.ui  freeplay-01.pro  freeplaycw.cpp  freeplaycw.h  gotocell.ui  gotocelldialog.cpp  gotocelldialog.h  gotocelldialog.ui  label.cpp  label.h  main.cpp  sort.pro  sortdialog.cpp  sortdialog.h  sortdialog.ui  window.cpp  window.h  window.ui
